--- a/ComixBook/ComixBook.html
+++ b/ComixBook/ComixBook.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Comix Book</title>
 </head>
 
 <body>
 <img src="ComixBook1.jpg"> <br>
-Series: 3 issue mini series<br>
-Publisher: 1974 Curtis (Marvel)<br>
+3 issues in 1974 by Curtis (Marvel)<br>
 <p>
-The underground comics movement in the late 1960s with titles like "the Fabulous Freak Brothers", "Zap", and "Weirdo", Marvel takes a stab at making an "underground" comic book.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ComixBook1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ComixBook2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ComixBook3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-<img src="ComixBook2.jpg">
+The underground comics movement in the late 1960s with titles like "the Fabulous Freak Brothers", "Zap", and "Weirdo", Marvel takes a stab at making an "underground" comic book.
+
 </p><p>
 Comix Book is an underground comic book series published from 1974–1976, originally by Marvel Comics. It was the first comic of this type to be published by a mainstream publisher. 
 </p><p>
-<img src="ComixBook3.jpg">
-</p><p>
+
 Edited by Denis Kitchen, Comix Book featured work by such underground luminaries as Justin Green, Kim Deitch, Trina Robbins, Art Spiegelman, and S. Clay Wilson. 
 </p><p>
 While it did not depict the explicit content that was often featured in underground comix, it was more socially relevant than anything Marvel had previously published.
