--- a/CompleteComics/CompleteComics.html
+++ b/CompleteComics/CompleteComics.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Complete Comics</h2>
 <img src="CompleteComics.jpg"> <br>
-Series: one-shot<br>
-Publisher: 1944 Marvel<br>
+1 issue in 1944 by Marvel<br>
 <p>
 
 </p>
