--- a/ConanBookOfThoth/ConanBookOfThoth.html
+++ b/ConanBookOfThoth/ConanBookOfThoth.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Conan Book of Thoth</h2>
 <img src="ConanBookOfThoth.jpg"> <br>
-Writer: Kurt Busiek, Len Wein
-Illustrator: Kelley Jones
-Series: 4 issue mini series<br>
-Publisher: 2006 Dark Horse<br>
+Writer: Kurt Busiek, Len Wein, Illustrator: Kelley Jones<br>
+4 issues in 2006 by Dark Horse
 <p>
 Thoth slays his friend Amon and begins his journey to becoming the feared sorcerer Thoth-Amon.
 </p>
