--- a/ConanTheLegend/ConanTheLegend.html
+++ b/ConanTheLegend/ConanTheLegend.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Conan The Legend</h2>
 <img src="ConanTheLegend.jpg"> <br>
-Series: one-shot<br>
-Publisher: 2003 Dark Horse<br>
+1 issue in 2003 by Dark Horse
 <p>
 Stoke the primeval fires of your mind with this bargain-priced introductory one-shot! Conan The Legend features a 16-page prelude story introducing readers to the sprawling, lusty, battle-filled legend of Conan, establishing characters and situations important to the series, and setting the stage for the adventures to come. Plus a sketchbook gallery of artist Cary Nord's stunning work and a mini-interview with writer Kurt Busiek.
 </p>
