--- a/Concrete/Concrete.html
+++ b/Concrete/Concrete.html
@@ -2,16 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Concrete</title>
 </head>
 
 <body>
-<h2>Concrete</h2>
-<img src="Concrete.jpg"> <br>
-Series: on-going<br>
-Publisher: 1987 Dark Horse<br>
+<img src="Concrete1.jpg"> <br>
+10 issues in 1987, 2 issues 1993, 7 issues 2005, 2 issues 2014 by Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Concrete1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Concrete10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Concrete is a comic book series created and written by Paul Chadwick and published by Dark Horse Comics. His first appearance is Dark Horse Presents #1 (July, 1986). The eponymous central character is a normal man whose brain was transplanted into a large, stone body by aliens, and who lives an extraordinary life on Earth following his escape.
 </p><p>
 The Concrete series focuses on realism. Apart from the aliens (which appear only in original series issue No. 3, in Concrete's recounting of his origin) and Concrete's own high-tech, artificial, stone body (which includes a host of attendant abilities), there are no supernatural or science-fiction elements to any stories.
