--- a/Conspiracy/Conspiracy.html
+++ b/Conspiracy/Conspiracy.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Conspiracy</h2>
 <img src="Conspiracy1.jpg"> 
 <img src="Conspiracy2.jpg"> <br>
-Illustrator: Igor Kordey<br>
-Writer: Dan Abnett<br>
-Series: 2 issue mini series<br>
-Publisher: 1998 Marvel<br>
+Illustrator: Igor Kordey, Writer: Dan Abnett<br>
+2 issues 1998 Marvel
 <p>
 Show &amp; Tell, Written by Dan Abnett. Painted Art and Cover by Igor Kordey. Mark Ewing is a Daily Bugle investigative reporter who has stumbled upon a story that just may change the way you look at the Marvel Universe forever! Featuring Jonah Jameson, Joe Robertson, Damage Control, Ben Urich and S.H.I.E.L.D.
 </p>
