--- a/ContestOfChampions/ContestOfChampions.html
+++ b/ContestOfChampions/ContestOfChampions.html
@@ -2,18 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Contest of Champions</title>
 </head>
 
 <body>
-<h2>Contest of Champions</h2>
-<img src="ContestOfChampions.jpg"> 
-<img src="ContestOfChampionsCollection.jpg"> 
-<img src="ContestOfChampions2015.jpg"> <br>
-Publisher: 1982, 1999, 2015 Marvel<br>
-Series: 3 issue limited series in 1982, collected as one-shot in 1999, back in 2015.<br>
+<img src="ContestOfChampions.jpg"> <br>
+3 issues 1982, 1 collection TPB 1999, 10 issues 2015, 2 issues 2016 Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampions.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampions2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampions3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampionsCollection.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampions2015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ContestOfChampions2016.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 1982: "Chapter 1: A Gathering of Heroes!" Guest-starring every super hero in the Marvel Universe. Story by Mark Gruenwald, Bill Mantlo, and Steven Grant. Art by John Romita, Jr. and Pablo Marcos. Cover by John Romita, Jr. and Bob Layton. 
 </p><p>
 The world's super heroes mysteriously disappear from Earth and then reappear in a giant arena in outer space. The Grandmaster and Death herself have decided to use the Earth's super heroes as pawns in a game they are playing against one another. If the Grandmaster wins the game, his brother, the Collector, will be restored to life. Both the Grandmaster and Death select 12 heroes to fight for their side and find the four pieces of the golden globe of life. Whichever team finds the most pieces wins!
