--- a/ContestOfChampionsII/ContestOfChampionsII.html
+++ b/ContestOfChampionsII/ContestOfChampionsII.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Contest of Champions II</h2>
 <img src="ContestOfChampionsII.jpg"> <br>
-Series: 5 issue limited series<br>
-Publisher: 1999 Marvel<br>
+5 issues in 1999 by Marvel
 <p>
 The greatest heroes of the Marvel Universe go to war with each other in this all-new super slugfest. From deep space comes the Coiterie, a group of intergalactic samaritans who come to Earth seeking its most powerful champion through all-out combat. But what could possibly make our heroes compete against one another? How about this: the victor receives a miraculous wish of their choice. But as Wolverine, Spider-Man, the Thing, Rogue, Thor, Hulk and a legion of heroes are culled from the Avengers, Fantastic Four and the X-Men, the participants begin to wonder: could their alien hosts really have a more sinister agenda? 
 </p><p>
