--- a/ContractWithGod/contractwithgod.html
+++ b/ContractWithGod/contractwithgod.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>A Contract With God</h2>
 <img src="ContractWithGod.jpg"><br>
-Series: Graphic Novel<br>
-Illustrator: Will Eisner<br>
-Writer: Will Eisner<br>
-Publisher: 1978 by Baronet Books<br>
+1 issue in 1978 by Baronet Books<br>
+Created by Will Eisner
 <p>
 The book that coined the phrase Graphic Novel, it contains four stories: A Contract with God, The Street Singer, The Super, Cookalein. Following the author's introduction, "A Tenement in the Bronx", the book contains four stories set in a tenement building. They derive in part from Eisner's personal memories growing up in a tenement in the Bronx.
 </p><p>
