--- a/CountDuckula/CountDuckula.html
+++ b/CountDuckula/CountDuckula.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Count Duckula</h2>
 <img src="CountDuckula.jpg"> <br>
-Series: on-going, 15 issues<br>
-Publisher: 1988 Marvel<br>
+15 issues 1988 Marvel<br>
 <p>
 Comic book version of the animated series which originally aired in the late 1980s. "Lights! Camera! Traction!" Scripts by Michael Gallagher and art by Warren Kremer. 
 </p><p>
