--- a/kb.html
+++ b/kb.html
@@ -8022,6 +8022,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Magic Comics</td>
+<td>1939</td>
+<td>David McKay</td>
+<td><a href="MagicComics/MagicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magik</td>
 <td>1984</td>
 <td>Marvel</td>
