--- a/Cyberspace3000/Cyberspace3000.html
+++ b/Cyberspace3000/Cyberspace3000.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Cyberspace 3000</h2>
 <img src="Cyberspace3000.jpg"> <br>
-Series: 8 issue min-series<br>
-Publisher: 1993 Marvel<br>
+8 issues in 1993 by Marvel
 <p>
 Marvel UK presents Cyberspace 3000, with a cover that explodes with glow in the dark detail. This spectacular science fiction saga charts the harrowing journey of a group of Earth's survivors in desperate search of a future. Guest starring Galactus. Written by Gary Russell. Art by Steve Tappin and Michael Eve. Cover by Liam Sharp and Andy Lanning.
 </p><p>
