--- a/DP7/DP7.html
+++ b/DP7/DP7.html
@@ -7,18 +7,12 @@
 </head>
 
 <body>
-<h2>DP7</h2>
 <img src="DP7.jpg"> <br>
-Writer: Mark Gruenwald<br>
-Illustrators: Paul Ryan, Romeo Tanghal<br>
-Series: on-going, 32 issues<br>
-Publisher: 1986 Marvel<br>
+Writer: Mark Gruenwald, illustrators: Paul Ryan, Romeo Tanghal<br>
+32 issues in 1986 by Marvel<br>
 <p>
 Issue #1 "The Clinic!":<br>
-It's a world not unlike our own. Words like paranormal or super-hero are euphemisms only used in comic books and movies. That was until the White Event! In one blinding moment the landscape of the universe changed. Welcome to the New Universe. Seven very special people are brought together by their unique abilities at the mysterious facility known as "The Clinic for Paranormal Research." They soon find themselves caught up in a conspiracy bigger than anyone could have possibly realized. When they revolt against their oppressors and go on the lamb they will forever be known as D.P. 7 (Displaced Paranormals - 7).
-</p><p>
-
+It's a world not unlike our own. Words like paranormal or super-hero are euphemisms only used in comic books and movies. That was until the White Event! In one blinding moment the landscape of the universe changed. Welcome to the New Universe. Seven very special people are brought together by their unique abilities at the mysterious facility known as "The Clinic for Paranormal Research." They soon find themselves caught up in a conspiracy bigger than anyone could have possibly realized. When they revolt against their oppressors and go on the lamb they will forever be known as D.P. 7 (Displaced Paranormals-7).
 </p>
-
 </body>
 </html>
