--- a/Dalgoda/Dalgoda.html
+++ b/Dalgoda/Dalgoda.html
@@ -11,8 +11,7 @@
 <img src="Dalgoda01.jpg"> <br>
 Writer: Jan Strnad<br>
 Illustrator: Dennis Fujitake<br>
-Series: 8 issues 1984 - 1986<br>
-Publisher: Fantagraphics<br>
+8 issues 1984-1986 by Fantagraphics
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
