--- a/DamageControl/DamageControl.html
+++ b/DamageControl/DamageControl.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Damage Control</h2>
-<img src="DamageControl.jpg"> <br>
-Series: 4 issue mini series<br>
-Publisher: 1989 Marvel<br>
+<img src="DamageControl.jpg"><br>
+4 issues 1989 Marvel
 <p>
 "A Restoration Comedy!" Story by Dwayne McDuffie. Art by Ernie Colon and Bob Wiacek. 
 </p><p>
