--- a/FantasticFour/FantasticFour.html
+++ b/FantasticFour/FantasticFour.html
@@ -13,12 +13,7 @@ the Fantastic Four<br>
 <img src="FantasticFourpinup2.jpg"> <br>
 Publisher: Marvel Comics
 <p>
-Series: #1-416 (1961-1996), 416-429 (1996-1997), 430-588 (1998-2011), 600-611 (2012), 612-626 (2013-2014), 627-645 (2014-2015)<br>
-</p><p>
-The Fantastic Four is a fictional superhero team appearing in American comic books published by Marvel Comics. The group debuted in The Fantastic Four #1 (cover dated Nov. 1961), which helped to usher in a new level of realism in the medium. The Fantastic Four was the first superhero team created by editor/co-plotter Stan Lee and artist/co-plotter Jack Kirby, who developed a collaborative approach to creating comics with this title that they would use from then on.
-</p><p>
-The four individuals traditionally associated with the Fantastic Four, who gained superpowers after exposure to cosmic rays during a scientific mission to outer space, are Mister Fantastic (Reed Richards), a scientific genius and the leader of the group, who can stretch his body into incredible lengths and shapes; the Invisible Woman (Susan "Sue" Storm), who eventually married Reed, who can render herself invisible and later project powerful invisible force fields; the Human Torch (Johnny Storm), Sue's younger brother, who can generate flames, surround himself with them and fly; and the monstrous Thing (Ben Grimm), their grumpy but benevolent friend, a former college football star and Reed's college roommate as well as a good pilot, who possesses tremendous superhuman strength, durability, and endurance due to the nature of his stone-like flesh.
-</p><p>
+
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -225,6 +220,7 @@ The four individuals traditionally associated with the Fantastic Four, who gaine
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour197.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour198.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour199.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FantasticFour200.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour201.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour202.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FantasticFour203.jpg"></div>
@@ -329,7 +325,13 @@ The four individuals traditionally associated with the Fantastic Four, who gaine
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+</p><p>
+Series: #1-416 (1961-1996), 416-429 (1996-1997), 430-588 (1998-2011), 600-611 (2012), 612-626 (2013-2014), 627-645 (2014-2015)<br>
+</p><p>
+The Fantastic Four is a fictional superhero team appearing in American comic books published by Marvel Comics. The group debuted in The Fantastic Four #1 (cover dated Nov. 1961), which helped to usher in a new level of realism in the medium. The Fantastic Four was the first superhero team created by editor/co-plotter Stan Lee and artist/co-plotter Jack Kirby, who developed a collaborative approach to creating comics with this title that they would use from then on.
+</p><p>
+The four individuals traditionally associated with the Fantastic Four, who gained superpowers after exposure to cosmic rays during a scientific mission to outer space, are Mister Fantastic (Reed Richards), a scientific genius and the leader of the group, who can stretch his body into incredible lengths and shapes; the Invisible Woman (Susan "Sue" Storm), who eventually married Reed, who can render herself invisible and later project powerful invisible force fields; the Human Torch (Johnny Storm), Sue's younger brother, who can generate flames, surround himself with them and fly; and the monstrous Thing (Ben Grimm), their grumpy but benevolent friend, a former college football star and Reed's college roommate as well as a good pilot, who possesses tremendous superhuman strength, durability, and endurance due to the nature of his stone-like flesh.
+</p><p>
 <ul>
 <li><a href="FantasticFour001.html">Fantastic Four #01</a> The Fantastic Four</li>
 <li><a href="FantasticFour002.html">Fantastic Four #02</a> Skrulls from Outer Space</li>
@@ -556,82 +558,6 @@ The four individuals traditionally associated with the Fantastic Four, who gaine
 <li><a href="FantasticFour223.html">Fantastic Four #223</a> </li>
 <li><a href="FantasticFour224.html">Fantastic Four #224</a> </li>
 <li><a href="FantasticFour225.html">Fantastic Four #225</a> The Blind God's Tears (Dec 1980)</li>
-<li><a href="FantasticFour226.html">Fantastic Four #226</a> </li>
-<li><a href="FantasticFour227.html">Fantastic Four #227</a> </li>
-<li><a href="FantasticFour228.html">Fantastic Four #228</a> </li>
-<li><a href="FantasticFour229.html">Fantastic Four #229</a> </li>
-<li><a href="FantasticFour230.html">Fantastic Four #230</a> </li>
-<li><a href="FantasticFour231.html">Fantastic Four #231</a> </li>
-<li><a href="FantasticFour232.html">Fantastic Four #232</a> </li>
-<li><a href="FantasticFour233.html">Fantastic Four #233</a> </li>
-<li><a href="FantasticFour234.html">Fantastic Four #234</a> </li>
-<li><a href="FantasticFour235.html">Fantastic Four #235</a> </li>
-<li><a href="FantasticFour236.html">Fantastic Four #236</a> </li>
-<li><a href="FantasticFour237.html">Fantastic Four #237</a> </li>
-<li><a href="FantasticFour238.html">Fantastic Four #238</a> </li>
-<li><a href="FantasticFour239.html">Fantastic Four #239</a> </li>
-<li><a href="FantasticFour240.html">Fantastic Four #240</a> </li>
-<li><a href="FantasticFour241.html">Fantastic Four #241</a> </li>
-<li><a href="FantasticFour242.html">Fantastic Four #242</a> </li>
-<li><a href="FantasticFour243.html">Fantastic Four #243</a> </li>
-<li><a href="FantasticFour244.html">Fantastic Four #244</a> </li>
-<li><a href="FantasticFour245.html">Fantastic Four #245</a> </li>
-<li><a href="FantasticFour246.html">Fantastic Four #246</a> </li>
-<li><a href="FantasticFour247.html">Fantastic Four #247</a> </li>
-<li><a href="FantasticFour248.html">Fantastic Four #248</a> </li>
-<li><a href="FantasticFour249.html">Fantastic Four #249</a> </li>
-<li><a href="FantasticFour250.html">Fantastic Four #250</a> X-Factor! (Jan 1983)</li>
-<li><a href="FantasticFour251.html">Fantastic Four #251</a> </li>
-<li><a href="FantasticFour252.html">Fantastic Four #252</a> </li>
-<li><a href="FantasticFour253.html">Fantastic Four #253</a> </li>
-<li><a href="FantasticFour254.html">Fantastic Four #254</a> </li>
-<li><a href="FantasticFour255.html">Fantastic Four #255</a> </li>
-<li><a href="FantasticFour256.html">Fantastic Four #256</a> </li>
-<li><a href="FantasticFour257.html">Fantastic Four #257</a> </li>
-<li><a href="FantasticFour258.html">Fantastic Four #258</a> </li>
-<li><a href="FantasticFour259.html">Fantastic Four #259</a> </li>
-<li><a href="FantasticFour260.html">Fantastic Four #260</a> </li>
-<li><a href="FantasticFour261.html">Fantastic Four #261</a> </li>
-<li><a href="FantasticFour262.html">Fantastic Four #262</a> </li>
-<li><a href="FantasticFour263.html">Fantastic Four #263</a> </li>
-<li><a href="FantasticFour264.html">Fantastic Four #264</a> </li>
-<li><a href="FantasticFour265.html">Fantastic Four #265</a> </li>
-<li><a href="FantasticFour266.html">Fantastic Four #266</a> </li>
-<li><a href="FantasticFour267.html">Fantastic Four #267</a> </li>
-<li><a href="FantasticFour268.html">Fantastic Four #268</a> </li>
-<li><a href="FantasticFour269.html">Fantastic Four #269</a> </li>
-<li><a href="FantasticFour270.html">Fantastic Four #270</a> </li>
-<li><a href="FantasticFour271.html">Fantastic Four #271</a> </li>
-<li><a href="FantasticFour272.html">Fantastic Four #272</a> </li>
-<li><a href="FantasticFour273.html">Fantastic Four #273</a> </li>
-<li><a href="FantasticFour274.html">Fantastic Four #274</a> </li>
-<li><a href="FantasticFour275.html">Fantastic Four #275</a> Cowboys and Idioms! (Feb 1985)</li>
-<li><a href="FantasticFour276.html">Fantastic Four #276</a> </li>
-<li><a href="FantasticFour277.html">Fantastic Four #277</a> </li>
-<li><a href="FantasticFour278.html">Fantastic Four #278</a> </li>
-<li><a href="FantasticFour279.html">Fantastic Four #279</a> </li>
-<li><a href="FantasticFour280.html">Fantastic Four #280</a> </li>
-<li><a href="FantasticFour281.html">Fantastic Four #281</a> </li>
-<li><a href="FantasticFour282.html">Fantastic Four #282</a> </li>
-<li><a href="FantasticFour283.html">Fantastic Four #283</a> </li>
-<li><a href="FantasticFour284.html">Fantastic Four #284</a> </li>
-<li><a href="FantasticFour285.html">Fantastic Four #285</a> </li>
-<li><a href="FantasticFour286.html">Fantastic Four #286</a> </li>
-<li><a href="FantasticFour287.html">Fantastic Four #287</a> </li>
-<li><a href="FantasticFour288.html">Fantastic Four #288</a> </li>
-<li><a href="FantasticFour289.html">Fantastic Four #289</a> </li>
-<li><a href="FantasticFour290.html">Fantastic Four #290</a> </li>
-<li><a href="FantasticFour291.html">Fantastic Four #291</a> </li>
-<li><a href="FantasticFour292.html">Fantastic Four #292</a> </li>
-<li><a href="FantasticFour293.html">Fantastic Four #293</a> </li>
-<li><a href="FantasticFour294.html">Fantastic Four #294</a> </li>
-<li><a href="FantasticFour295.html">Fantastic Four #295</a> </li>
-<li><a href="FantasticFour296.html">Fantastic Four #296</a> </li>
-<li><a href="FantasticFour297.html">Fantastic Four #297</a> </li>
-<li><a href="FantasticFour298.html">Fantastic Four #298</a> </li>
-<li><a href="FantasticFour299.html">Fantastic Four #299</a> </li>
-<li><a href="FantasticFour300.html">Fantastic Four #300</a> Dearly Beloved...! (Mar 1987)</li>
-
 </ul>
 
 </p><p>
