--- a/CubaMyRevolution/CubaMyRevolution.html
+++ b/CubaMyRevolution/CubaMyRevolution.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Cuba: My Revolution</h2>
 <img src="CubaMyRevolution.jpg"> <br>
-Writer: Inverna Lockpez<br>
-Illustrator: by Dean Haspiel<br>
-Series: Graphic Novel<br>
-Publisher: 2010 Vertigo (DC)<br>
+Writer: Inverna Lockpez, Illustrator: by Dean Haspiel<br>
+1 issue in 2010 by Vertigo (DC)
 <p>
 From the moment Fidel Castro captures Havana in 1959, 17-year-old Sonya believes in the promise of the Cuban Revolution. A medical student who dreams of becoming a painter, she joins the militia and finds herself caught between idealism and ideology. As a volunteer medic at the Bay of Pigs, she's imprisoned and tortured by her own comrades. Physically and emotionally scarred upon returning home, Sonya searches for fulfillment in art. But when she realizes that none of her efforts, by gun or brush, fall in line with Castro's regime, Sonya must make agonizing choices between her family, her lover and her beloved country. 
 </p><p>
