--- a/DailyBugle/DailyBugle.html
+++ b/DailyBugle/DailyBugle.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Daily Bugle</h2>
 <img src="DailyBugle.jpg"> <br>
-Series: 3 issue mini series<br>
-Publisher: 1996 Marvel<br>
+3 issues in 1996 by Marvel
 <p>
 Script by Paul Grist, pencils by Karl Kerschl, inks by Greg Adams.
 </p><p>
