--- a/DancesWithDemons/DancesWithDemons.html
+++ b/DancesWithDemons/DancesWithDemons.html
@@ -2,22 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Dances With Demons</title>
 </head>
 
 <body>
-<h2>Dances With Demons</h2>
-<img src="DancesWithDemons.jpg"> 
-<img src="DancesWithDemons2.jpg"> 
-<img src="DancesWithDemons3.jpg"> 
-<img src="DancesWithDemons4.jpg"> 
-<br>
-Illustrator: Charlie Adlard <br>
-Writer: Simon Jowett<br>
-Series: 4 issue mini-series<br>
-Publisher: 1993 Marvel <br>
+<img src="DancesWithDemons.jpg"><br>
+Illustrator: Charlie Adlard, writer: Simon Jowett<br>
+4 issues 1993 Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DancesWithDemons.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DancesWithDemons2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DancesWithDemons3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DancesWithDemons4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Chapter One "Ghost Dancer." James Owl is an unwilling heir to the power of his Native American ancestors and stalked by an evil spirit who covets his gifts and who, in doing so, leaves a trail of blood and destruction in his wake. As James Owl attempts to escape from his destiny, the flesh eating shape shifting Manitou brings his hunt to Beverly Hills...and Owl's loved ones. Reluctant sorcerer-in-training James Owl is taken on a vision quest! Meanwhile, the Manitou and Iktomi the Trickster negotiate a deal between demons.
 </p>
 
