--- a/kb.html
+++ b/kb.html
@@ -10349,14 +10349,12 @@ Creative Knowledgebase<br>
 <td><a href="Psychonauts/Psychonauts.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Psylocke and Archangel</td>
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="PsylockeArchangel/PsylockeArchangel.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>Puck</td>
@@ -10379,6 +10377,13 @@ Creative Knowledgebase<br>
 <td>1985</td>
 <td>Marvel</td>
 <td><a href="Punisher/Punisher.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Punk Magazine</td>
+<td>1975</td>
+<td>Ged Dunn</td>
+<td><a href="PunkMagazine/PunkMagazine.html">Details</a></td>
 </tr>
 
 
