--- a/DaredevilBatman/DaredevilBatman.html
+++ b/DaredevilBatman/DaredevilBatman.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Daredevil and Batman</h2>
 <img src="DaredevilBatman.jpg"> <br>
-Series: one-shot<br>
-Publisher: 1997 DC/Marvel<br>
+1 issue 1997 DC/Marvel<br>
 <p>
 Daredevil ends up in Gotham, forms an uneasy alliance with Batman, and goes after Two-Face and Mr Hyde. This is a one-shot DC/Marvel crossover by D.G. Chichester and Scott McDaniel published in 1997. 
 </p><p>
