--- a/Daredevils/Daredevils.html
+++ b/Daredevils/Daredevils.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>the Daredevils</h2>
 <img src="Daredevils.jpg"> <br>
-Series: 11 issues, magazine size reprints<br>
-Publisher: 1982 Marvel UK<br>
+11 issues, magazine size reprints in 1982 by Marvel UK<br>
 <p>
 The Daredevils was a comics magazine and anthology published by Marvel UK in 1983. Aimed for a more sophisticated audience than typical light superhero adventures, The Daredevils featured Captain Britain stories by Alan Moore and Alan Davis, as well as new Night Raven text stories, and reprints of Frank Miller's Daredevil stories. In addition to these regular features, it also included some Spider-Man stories, occasional one-off comic stories, and a variety of text articles.
 </p><p>
