--- a/DarkAngel/DarkAngel.html
+++ b/DarkAngel/DarkAngel.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-<h2>Dark Angel</h2>
 <img src="DarkAngel.jpg"> <br>
-Series: 10 issues (#6-16) numbering continues from Hells Angel (#1-5) 1992 Marvel<br>
-Publisher: 1992 Marvel UK<br>
+10 issues #6-16 in 1992 by Marvel UK<br>
 <p>
+The numbering continues from Hells Angel (#1-5)
+</p><p>
 Excalibur, X-Men. Shevaun Haldane changes her name from Hell's Angel to Dark Angel, as Excalibur is called in to deal with a creature that's wandering the Moors and chewing up civilians in "Bad Blood." Dark Angel and Psylocke go up against The Model Soldiers. Dark Angel and Psylocke allow themselves to be captured by MyS-Tech so they can infiltrate their base and destroy their plans to make some sort of chemical that would manipulate people's emotions. The Mys-Tech board has a list, with the X-Men and Dark Angel at the top of it. The Psycho-Warriors attempt to assassinate Dark Angel. Dark Angel survives the final assassination attempt, a deadly robot called Safehouse. Profile of Safehouse. The Mys-Tech board become the Mys-Tech Techno-Wizards.
 </p>
 
