--- a/DarkCrystal/DarkCrystal.html
+++ b/DarkCrystal/DarkCrystal.html
@@ -2,20 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Dark Crystal</title>
 </head>
 
 <body>
-<h2>the Dark Crystal</h2>
-<img src="DarkCrystal.jpg"> 
-<img src="DarkCrystal2.jpg"> <br>
-Illustrators: Bret Blevins, Vince Colletta<br>
-Writer: David Anthony Kraft<br>
-Series: 2 issue movie adaptation<br>
-Publisher: 1983 Marvel<br>
+<img src="DarkCrystal.jpg"><br>
+1 Movie in 1982 by Universal, 2 issue comic in 1983 by Marvel
 <p>
-This is the official comics adaptation of the Jim Henson epic fantasy adventure film. The power of the Skesis grow, the Mystics are on the move, and Jen races against the clock to heal the Dark Crystal! 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkCrystal6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+The Dark Crystal is a 1982 puppet animated dark fantasy adventure film directed by Jim Henson and Frank Oz. It stars the voices of Stephen Garlick, Lisa Maxwell, Billie Whitelaw, Percy Edwards, and Barry Dennen. The film was produced by ITC Entertainment and Henson Associates and distributed by Universal Pictures. The plot revolves around Jen, an elf-like "Gelfling" on a quest to restore balance to his alien world by returning the lost shard of a powerful but broken gem.
+</p><p>
+It was marketed as a family film, but was notably darker than the creators' previous material. The animatronics used in the film were considered groundbreaking. The primary concept artist was fantasy illustrator Brian Froud, famous for his distinctive fairy and dwarf designs. Froud also collaborated with Henson and Oz for their next project, the 1986 film Labyrinth.
+</p><p>
+The Dark Crystal was produced by Gary Kurtz, while the screenplay was written by David Odell, with whom Henson previously worked as a staff writer for The Muppet Show. The film score was composed by Trevor Jones. The film received mixed to positive reviews from mainstream critics; while being criticized for its darker, more dramatic tone in contrast to Henson‘s previous works, it was praised for its narrative, aesthetic, and characters, and has garnered a cult following in recent years. A prequel television series, The Dark Crystal: Age of Resistance, will premiere on Netflix on August 30, 2019.
 </p>
 
 </body>
