--- a/kb.html
+++ b/kb.html
@@ -3925,8 +3925,8 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Dark Crystal</td>
-<td>1983</td>
-<td>Marvel</td>
+<td>1982</td>
+<td>Universal</td>
 <td><a href="DarkCrystal/DarkCrystal.html">Details</a></td>
 </tr>
 
