--- a/DarkGuard/DarkGuard.html
+++ b/DarkGuard/DarkGuard.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Dark Guard</h2>
 <img src="DarkGuard.jpg"> <br>
-Series: 4 issue mini-series<br>
-Publisher: 1993 Marvel <br>
+4 issues 1993 Marvel <br>
 <p>
 Tour Of Duty, script by Dan Abnett, pencils by Carlos Pacheco, inks by Oscar Jiminez; Dark Guard is formed by The Time Guardian to defeat Mys-Tech before they subjugate all mankind. 
 </p><p>
