--- a/Darkhawk/Darkhawk.html
+++ b/Darkhawk/Darkhawk.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Darkhawk</h2>
 <img src="Darkhawk.jpg"> <br>
-Cover: Mike Manley<br>
+Cover and illustrator: Mike Manley<br>
 Writer: Danny Fingeroth<br>
-Illustrator: Mike Manley<br>
-Series: on-going, 50 issues<br>
-Publisher: 1991-1995 Marvel<br>
+50 issues, 1991-1995 Marvel
 <p>
 Dawn of the Darkhawk. Chris Powell finds the Darkhawk amulet; Bazin is unable to bribe Chris' mother (an assistant DA), but bribes Chris' father (a cop) who then leaves the family; Bazin and Hobgoblin want the Darkhawk power; Saint Johnny gives Chris the name Darkhawk. 
 </p>
