--- a/Darkman/Darkman.html
+++ b/Darkman/Darkman.html
@@ -2,18 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Darkman</title>
 </head>
 
 <body>
-<h2>Darkman</h2>
-<img src="DarkmanMovie.jpg"> 
-<img src="Darkman1990.jpg"> 
-<img src="Darkman1993.jpg"> <br>
-Series: movie adaptation magazine (1990), 3 issue movie adaptation (1990), 6 issue mini-series(1993).<br>
-Publisher: Marvel<br>
+<img src="DarkmanMovie.jpg"> <br>
+1 Movie 1990 Universal<br>
+1 magazine, 3 issue comic in 1990, 6 issue comic series in 1993 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DarkmanMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkmanMag.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkman1990.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkman1993.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkmanMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DarkmanMovie3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Darkman is a 1990 American superhero film directed and co-written by Sam Raimi. It is based on a short story Raimi wrote that paid homage to Universal's horror films of the 1930s. The film stars Liam Neeson as Peyton Westlake, a scientist who is attacked and left for dead by a ruthless mobster, Robert Durant (Larry Drake), after his girlfriend, an attorney (Frances McDormand), runs afoul of a corrupt developer (Colin Friels).
 </p><p>
 Unable to secure the rights to either The Shadow or Batman, Raimi decided to create his own superhero and struck a deal with Universal Studios to make his first Hollywood studio film. It was produced by Robert Tapert, and was written by Raimi, his brother Ivan Raimi and Chuck Pfarrer. The design and creation of the makeup effects required to turn Liam Neeson into Darkman were the handiwork of makeup effects artist Tony Gardner, who also cameos in the film as the Lizard Man in the carnival Freak Show sequence.
