--- a/DarkEntries/DarkEntries.html
+++ b/DarkEntries/DarkEntries.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Dark Entries</h2>
 <img src="DarkEntries.jpg"> <br>
 Cover: Lee Bermejo<br>
-Illustrator: Werther Dell'edera<br>
-Writer: Ian Rankin<br>
-Series: A John Constantine Graphic Novel<br>
-Publisher: 2009 Vertigo Crime (DC)<br>
+Illustrator: Werther Dell'edera, Writer: Ian Rankin<br>
+1 issue in 2009 by Vertigo Crime (DC)<br>
 <p>
 HELLBLAZER's John Constantine must become part of HAUNTED PALACE, a closed set reality game show, to deal with the supernatural murder of one of the cast. He enters as a surprise contestant and meets the other participants, learning that they all have secrets and that one of them must be channeling poltergeists and/or be the murderer. However, John soon learns that he is in fact in a game show which is being broadcast only to the denizens of Hell, who have chosen him to be the next contestant. Now he has to figure out who's the killer and how to escape with his soul intact.
 </p><p>
