--- a/Darkhold/Darkhold.html
+++ b/Darkhold/Darkhold.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Darkhold</h2>
 <img src="Darkhold.jpg"> <br>
-Series: on-going, 16 issues<br>
-Publisher: 1992 Marvel<br>
+16 issues in 1992 by Marvel
 <p>
 Special Collector's Item issue polybagged with bonus poster. Cover pencils by Richard Case, inks by Mark McKenna. Rise of the Midnight Sons Part 4: Black Letter, script by Christian Cooper, pencils by Richard Case, inks by Mark McKenna; Vicki Montesi discovers an ancient order of evil. Continued from Morbius #1; Continued in Nightstalkers #1. 1 part of a six-part poster by Andy Kubert.
 </p><p>
