--- a/kb.html
+++ b/kb.html
@@ -1731,6 +1731,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Atom Age Combat</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="AtomAgeCombat/AtomAgeCombat.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Age</td>
 <td>1995</td>
 <td>Marvel</td>
