--- a/AtomAgeCombat/AtomAgeCombat.html
+++ b/AtomAgeCombat/AtomAgeCombat.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="AtomAgeCombat1.jpg"> <br>
-5 issues in 1952 by St. John
+5 issues in 1952 by St. John, 2 issues in 1959 by Fargo.
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -24,6 +24,9 @@
 <div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AtomAgeCombat8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
