--- a/kb.html
+++ b/kb.html
@@ -31,6 +31,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>1st Issue Special</td>
+<td>1975</td>
+<td>DC</td>
+<td><a href="1stIssueSpecial/1stIssueSpecial.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3 Story Secret History </td>
 <td>2009</td>
 <td>Dark Horse</td>
